<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textZero"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textZero"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textMeio"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textMeio"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textUm"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textUm"
            android:textColor="#FF000000"
            android:textSize="45sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textDois"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textDois"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textTres"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textTres"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textCinco"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textCinco"
            android:textColor="#FF000000"
            android:textSize="45sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textOito"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textOito"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textTreze"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textTreze"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textVinte"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textVinte"
            android:textColor="#FF000000"
            android:textSize="45sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textQuarenta"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textQuarenta"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textCem"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/textCem"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/textInfinito"
            android:layout_width="50dp"
            android:layout_height="88dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:padding="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_infinity" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textInterrogacao"
            android:layout_width="98dp"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:background="#2196F3"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/textInterrogacao"
            android:textColor="#FF000000"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/textCoffe"
            android:layout_width="98dp"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:background="#2196F3"
            android:gravity="center"
            android:maxHeight="100dp"
            android:padding="15dp"
            android:src="@drawable/ic_coffee_cup" />


    </LinearLayout>


</LinearLayout>